--- a/frontend/classes.html
+++ b/frontend/classes.html
@@ -7,6 +7,7 @@
       content="width=device-width, initial-scale=1.0, shrink-to-fit=no"
     />
     <title>dancefit</title>
+    <link rel="manifest" href="manifest.json" />
     <link rel="stylesheet" href="assets/bootstrap/css/bootstrap.min.css" />
     <link
       rel="stylesheet"
@@ -29,100 +30,23 @@
     <link rel="stylesheet" href="assets/css/Map-Clean.css" />
     <link rel="stylesheet" href="assets/css/Pretty-Registration-Form.css" />
     <link rel="stylesheet" href="assets/css/Registration-Form-with-Photo.css" />
-    <link rel="stylesheet" href="assets/css/styles.css" />
     <link rel="stylesheet" href="assets/css/Toggle-Switches.css" />
+    <link rel="stylesheet" href="assets/css/spinner.css" />
     <script src="js/nav.js" defer></script>
+    <script src="js/classes.js" defer></script>
   </head>
 
-  <body>
+  <body class="d-flex flex-column min-vh-100">
     <nav class="navbar navbar-light navbar-expand-md bg-white"></nav>
-    <div class="container p-3">
-      <nav class="d-flex justify-content-center">
-        <ul class="pagination">
-          <li class="page-item">
-            <a class="page-link" href="#" aria-label="Previous"
-              ><span aria-hidden="true">«</span></a
-            >
-          </li>
-          <li class="page-item"><a class="page-link" href="#">1</a></li>
-          <li class="page-item"><a class="page-link" href="#">2</a></li>
-          <li class="page-item"><a class="page-link" href="#">3</a></li>
-          <li class="page-item"><a class="page-link" href="#">4</a></li>
-          <li class="page-item"><a class="page-link" href="#">5</a></li>
-          <li class="page-item">
-            <a class="page-link" href="#" aria-label="Next"
-              ><span aria-hidden="true">»</span></a
-            >
-          </li>
-        </ul>
-      </nav>
-      <div class="card-group">
-        <div class="card">
-          <img
-            class="card-img-top w-100 d-block"
-            src="assets/img/pexels-cottonbro-7974879.jpg"
-          />
-          <div class="card-body">
-            <h1 class="card-title">Hip-Hop</h1>
-            <h4>12:00pm Tuesday 08/03/22</h4>
-            <p class="card-text">
-              Nullam id dolor id nibh ultricies vehicula ut id elit. Cras justo
-              odio, dapibus ac facilisis in, egestas eget quam. Donec id elit
-              non mi porta gravida at eget metus.
-            </p>
-            <button class="btn btn-primary" type="button">Button</button>
-          </div>
-        </div>
-        <div class="card">
-          <img
-            class="card-img-top w-100 d-block"
-            src="assets/img/pexels-burst-374101.jpg"
-          />
-          <div class="card-body">
-            <h1 class="card-title">Yoga</h1>
-            <h4>3:00pm Tuesday 08/03/22</h4>
-            <p class="card-text">
-              Nullam id dolor id nibh ultricies vehicula ut id elit. Cras justo
-              odio, dapibus ac facilisis in, egestas eget quam. Donec id elit
-              non mi porta gravida at eget metus.
-            </p>
-            <button class="btn btn-primary" type="button">Button</button>
-          </div>
-        </div>
-        <div class="card">
-          <img
-            class="card-img-top w-100 d-block"
-            src="assets/img/pexels-cottonbro-7974879.jpg"
-          />
-          <div class="card-body">
-            <h1 class="card-title">Title</h1>
-            <h4>Heading</h4>
-            <p class="card-text">
-              Nullam id dolor id nibh ultricies vehicula ut id elit. Cras justo
-              odio, dapibus ac facilisis in, egestas eget quam. Donec id elit
-              non mi porta gravida at eget metus.
-            </p>
-            <button class="btn btn-primary" type="button">Button</button>
-          </div>
-        </div>
+    <div class="container p-3 h-100">
+      <div id="classes" class="card-group"></div>
+    </div>
+    <footer id="footer" class="footer-basic mt-auto"></footer>
+    <div id="spinner" class="d-flex justify-content-center">
+      <div class="spinner-border" role="status">
+        <span class="visually-hidden">Loading...</span>
       </div>
     </div>
-    <footer class="footer-basic">
-      <div class="social">
-        <a href="#"><i class="icon ion-social-instagram"></i></a
-        ><a href="#"><i class="icon ion-social-snapchat"></i></a
-        ><a href="#"><i class="icon ion-social-twitter"></i></a
-        ><a href="#"><i class="icon ion-social-facebook"></i></a>
-      </div>
-      <ul class="list-inline">
-        <li class="list-inline-item"><a href="#">Home</a></li>
-        <li class="list-inline-item"><a href="#">Services</a></li>
-        <li class="list-inline-item"><a href="#">About</a></li>
-        <li class="list-inline-item"><a href="#">Terms</a></li>
-        <li class="list-inline-item"><a href="#">Privacy Policy</a></li>
-      </ul>
-      <p class="copyright">Company Name © 2022</p>
-    </footer>
     <script src="assets/bootstrap/js/bootstrap.min.js"></script>
     <script src="assets/js/Dark-Mode-Switch.js"></script>
   </body>
