--- a/frontend/your-classes.html
+++ b/frontend/your-classes.html
@@ -29,12 +29,13 @@
     <link rel="stylesheet" href="assets/css/Map-Clean.css" />
     <link rel="stylesheet" href="assets/css/Pretty-Registration-Form.css" />
     <link rel="stylesheet" href="assets/css/Registration-Form-with-Photo.css" />
-    <link rel="stylesheet" href="assets/css/styles.css" />
     <link rel="stylesheet" href="assets/css/Toggle-Switches.css" />
+    <link rel="stylesheet" href="assets/css/spinner.css" />
     <script src="js/nav.js" defer></script>
+    <script src="js/your-classes.js"></script>
   </head>
 
-  <body>
+  <body class="d-flex flex-column min-vh-100">
     <nav class="navbar navbar-light navbar-expand-md bg-white"></nav>
     <div class="container p-3">
       <div class="card">
@@ -42,121 +43,16 @@
           <h5 class="mb-0">Your Classes</h5>
         </div>
         <div class="card-body">
-          <ul class="list-group">
-            <li class="list-group-item d-flex justify-content-between">
-              <span>Yoga 12:00pm 14/03/22</span
-              ><button class="btn btn-primary bg-danger btn-sm" type="button">
-                Cancel
-              </button>
-            </li>
-            <li class="list-group-item d-flex justify-content-between">
-              <span>Yoga 12:00pm 13/03/22<br /></span
-              ><button class="btn btn-primary bg-danger btn-sm" type="button">
-                Cancel
-              </button>
-            </li>
-            <li class="list-group-item d-flex justify-content-between">
-              <span>Yoga 12:00pm 08/03/22<br /></span
-              ><button
-                class="btn btn-primary disabled bg-danger btn-sm"
-                type="button"
-                disabled=""
-              >
-                Cancel
-              </button>
-            </li>
-          </ul>
-          <ul class="list-group">
-            <li class="list-group-item d-flex justify-content-between">
-              <span>Yoga 12:00pm 28/02/22<br /></span
-              ><button
-                class="btn btn-primary disabled bg-danger btn-sm"
-                type="button"
-                disabled=""
-              >
-                Cancel
-              </button>
-            </li>
-            <li class="list-group-item d-flex justify-content-between">
-              <span>Yoga 12:00pm 25/02/22<br /></span
-              ><button
-                class="btn btn-primary disabled bg-danger btn-sm"
-                type="button"
-                disabled=""
-              >
-                Cancel
-              </button>
-            </li>
-            <li class="list-group-item d-flex justify-content-between">
-              <span>Yoga 12:00pm 20/02/22<br /></span
-              ><button
-                class="btn btn-primary disabled bg-danger btn-sm"
-                type="button"
-                disabled=""
-              >
-                Cancel
-              </button>
-            </li>
-            <li class="list-group-item d-flex justify-content-between">
-              <span>Yoga 12:00pm 18/02/22<br /></span
-              ><button
-                class="btn btn-primary disabled bg-danger btn-sm"
-                type="button"
-                disabled=""
-              >
-                Cancel
-              </button>
-            </li>
-            <li class="list-group-item d-flex justify-content-between">
-              <span>Yoga 12:00pm 16/02/22<br /></span
-              ><button
-                class="btn btn-primary disabled bg-danger btn-sm"
-                type="button"
-                disabled=""
-              >
-                Cancel
-              </button>
-            </li>
-            <li class="list-group-item d-flex justify-content-between">
-              <span>Yoga 12:00pm 13/02/22<br /></span
-              ><button
-                class="btn btn-primary disabled bg-danger btn-sm"
-                type="button"
-                disabled=""
-              >
-                Cancel
-              </button>
-            </li>
-            <li class="list-group-item d-flex justify-content-between">
-              <span>Yoga 12:00pm 01/02/22<br /></span
-              ><button
-                class="btn btn-primary disabled bg-danger btn-sm"
-                type="button"
-                disabled=""
-              >
-                Cancel
-              </button>
-            </li>
-          </ul>
+          <ul id="bookings" class="list-group"></ul>
         </div>
       </div>
     </div>
-    <footer class="footer-basic">
-      <div class="social">
-        <a href="#"><i class="icon ion-social-instagram"></i></a
-        ><a href="#"><i class="icon ion-social-snapchat"></i></a
-        ><a href="#"><i class="icon ion-social-twitter"></i></a
-        ><a href="#"><i class="icon ion-social-facebook"></i></a>
+    <footer id="footer" class="footer-basic mt-auto"></footer>
+    <div id="spinner" class="d-flex justify-content-center">
+      <div class="spinner-border" role="status">
+        <span class="visually-hidden">Loading...</span>
       </div>
-      <ul class="list-inline">
-        <li class="list-inline-item"><a href="#">Home</a></li>
-        <li class="list-inline-item"><a href="#">Services</a></li>
-        <li class="list-inline-item"><a href="#">About</a></li>
-        <li class="list-inline-item"><a href="#">Terms</a></li>
-        <li class="list-inline-item"><a href="#">Privacy Policy</a></li>
-      </ul>
-      <p class="copyright">Company Name © 2022</p>
-    </footer>
+    </div>
     <script src="assets/bootstrap/js/bootstrap.min.js"></script>
     <script src="assets/js/Dark-Mode-Switch.js"></script>
   </body>
