--- a/frontend/login.html
+++ b/frontend/login.html
@@ -7,6 +7,7 @@
       content="width=device-width, initial-scale=1.0, shrink-to-fit=no"
     />
     <title>dancefit</title>
+    <link rel="manifest" href="manifest.json" />
     <link rel="stylesheet" href="assets/bootstrap/css/bootstrap.min.css" />
     <link
       rel="stylesheet"
@@ -29,15 +30,21 @@
     <link rel="stylesheet" href="assets/css/Map-Clean.css" />
     <link rel="stylesheet" href="assets/css/Pretty-Registration-Form.css" />
     <link rel="stylesheet" href="assets/css/Registration-Form-with-Photo.css" />
-    <link rel="stylesheet" href="assets/css/styles.css" />
     <link rel="stylesheet" href="assets/css/Toggle-Switches.css" />
+    <link rel="stylesheet" href="assets/css/spinner.css" />
     <script src="js/nav.js" defer></script>
+    <script src="js/login.js" defer></script>
   </head>
 
-  <body>
+  <body class="d-flex flex-column min-vh-100">
     <nav class="navbar navbar-light navbar-expand-md bg-white"></nav>
-    <section class="login-clean min-vh-100">
-      <form method="post">
+    <section class="login-clean">
+      <form
+        id="login-user-form"
+        class="needs-validation"
+        method="post"
+        novalidate
+      >
         <h2 class="visually-hidden">Login Form</h2>
         <div class="illustration border-0">
           <img class="img-thumbnail border-0" src="assets/img/ATQM7575.jpg" />
@@ -48,7 +55,9 @@
             type="email"
             name="email"
             placeholder="Email"
+            required
           />
+          <div class="invalid-feedback">Please fill out this field.</div>
         </div>
         <div class="mb-3">
           <input
@@ -56,12 +65,15 @@
             type="password"
             name="password"
             placeholder="Password"
+            required
           />
+          <div class="invalid-feedback">Please fill out this field.</div>
         </div>
         <div class="mb-3">
           <button
             class="btn btn-primary d-block w-100 bg-primary"
             type="submit"
+            onclick="postLoginUser()"
           >
             Log In
           </button>
@@ -69,6 +81,12 @@
         <a class="forgot" href="#">Forgot your password?</a>
       </form>
     </section>
+    <footer id="footer" class="footer-basic mt-auto"></footer>
+    <div id="spinner" class="d-flex justify-content-center">
+      <div class="spinner-border" role="status">
+        <span class="visually-hidden">Loading...</span>
+      </div>
+    </div>
     <script src="assets/bootstrap/js/bootstrap.min.js"></script>
     <script src="assets/js/Dark-Mode-Switch.js"></script>
   </body>
