--- a/frontend/settings.html
+++ b/frontend/settings.html
@@ -7,6 +7,7 @@
       content="width=device-width, initial-scale=1.0, shrink-to-fit=no"
     />
     <title>dancefit</title>
+    <link rel="manifest" href="manifest.json" />
     <link rel="stylesheet" href="assets/bootstrap/css/bootstrap.min.css" />
     <link
       rel="stylesheet"
@@ -21,7 +22,6 @@
     <link rel="stylesheet" href="assets/css/Article-Clean.css" />
     <link rel="stylesheet" href="assets/css/Article-List.css" />
     <link rel="stylesheet" href="assets/css/Contact-Form-Clean.css" />
-    <link rel="stylesheet" href="assets/css/Dark-Mode-Switch.css" />
     <link rel="stylesheet" href="assets/css/Footer-Basic.css" />
     <link rel="stylesheet" href="assets/css/Footer-Dark.css" />
     <link rel="stylesheet" href="assets/css/Highlight-Phone.css" />
@@ -29,93 +29,122 @@
     <link rel="stylesheet" href="assets/css/Map-Clean.css" />
     <link rel="stylesheet" href="assets/css/Pretty-Registration-Form.css" />
     <link rel="stylesheet" href="assets/css/Registration-Form-with-Photo.css" />
-    <link rel="stylesheet" href="assets/css/styles.css" />
     <link rel="stylesheet" href="assets/css/Toggle-Switches.css" />
+    <link rel="stylesheet" href="assets/css/spinner.css" />
     <script src="js/nav.js" defer></script>
+    <script src="js/settings.js" defer></script>
+    <link rel="stylesheet" href="assets/css/Dark-Mode-Switch.css" />
   </head>
 
-  <body>
+  <body class="d-flex flex-column min-vh-100">
     <nav class="navbar navbar-light navbar-expand-md bg-white"></nav>
-    <div class="container p-3">
+    <div class="container p-3 pb-5 pt-5 flex-grow-1">
       <div class="col-lg-12 d-lg-flex justify-content-lg-center">
         <div class="card shadow mb-3">
           <div class="card-header py-3">
             <p class="text-primary m-0 fw-bold">User Settings</p>
           </div>
           <div class="card-body">
-            <div class="toggle">
-              <input
-                type="radio"
-                id="cond_new"
-                name="bike_cond"
-                checked="checked"
-              /><label class="form-label" for="cond_new">Light Mode</label
-              ><input type="radio" id="cond_used" name="bike_cond" /><label
-                class="form-label"
-                for="cond_used"
+            <div class="form-check form-switch">
+              <input type="checkbox" class="form-check-input" id="darkSwitch" />
+              <label class="custom-control-label" for="darkSwitch"
                 >Dark Mode</label
               >
             </div>
-            <form>
+            <form
+              id="update-user-form"
+              method="post"
+              class="needs-validation"
+              novalidate
+            >
               <div class="row">
                 <div class="col">
                   <div class="form-group mb-3">
                     <label class="form-label" for="email"
                       ><strong>Email Address</strong></label
                     ><input
+                      id="email"
                       class="form-control"
                       type="email"
-                      placeholder="user@example.com"
                       name="email"
-                      readonly=""
+                      pattern="[a-z0-9._%+-]+@[a-z0-9.-]+\.[a-z]{2,4}$"
                     />
+                    <div class="invalid-feedback">Not a valid Email.</div>
                   </div>
                 </div>
               </div>
               <div class="row">
                 <div class="col">
                   <div class="form-group mb-3">
-                    <label class="form-label" for="first_name"
+                    <label class="form-label" for="firstName"
                       ><strong>First Name</strong></label
                     ><input
+                      id="firstName"
                       class="form-control"
                       type="text"
-                      placeholder="John"
-                      name="first_name"
+                      name="firstName"
+                      pattern="/^[a-z ,.'-]+$/i"
+                      required
                     />
+                    <div class="invalid-feedback">
+                      Please fill out this field.
+                    </div>
                   </div>
                 </div>
                 <div class="col">
                   <div class="form-group mb-3">
-                    <label class="form-label" for="last_name"
+                    <label class="form-label" for="lastName"
                       ><strong>Last Name</strong></label
                     ><input
+                      id="lastName"
                       class="form-control"
                       type="text"
-                      placeholder="Doe"
-                      name="last_name"
+                      name="lastName"
+                      pattern="/^[a-z ,.'-]+$/i"
+                      required
                     />
+                    <div class="invalid-feedback">
+                      Please fill out this field.
+                    </div>
                   </div>
                 </div>
               </div>
               <div class="row">
                 <div class="col">
                   <div class="form-group mb-3">
-                    <label class="form-label" for="first_name"
+                    <label class="form-label" for="password"
                       ><strong>New Password</strong><br /></label
-                    ><input class="form-control" type="password" />
+                    ><input
+                      id="password"
+                      name="password"
+                      class="form-control"
+                      type="password"
+                      pattern="^.{5,20}$"
+                    />
+                    <div class="invalid-feedback">
+                      Password needs to be between 5 and 20 characters.
+                    </div>
                   </div>
                 </div>
                 <div class="col">
                   <div class="form-group mb-3">
-                    <label class="form-label" for="last_name"
+                    <label class="form-label" for="confirm-password"
                       ><strong>Confirm New Password</strong><br /></label
-                    ><input class="form-control" type="password" />
+                    ><input
+                      id="confirm-password"
+                      class="form-control"
+                      type="password"
+                    />
+                    <div class="invalid-feedback">Password does not match.</div>
                   </div>
                 </div>
               </div>
               <div class="form-group mb-3">
-                <button class="btn btn-primary btn-sm" type="submit">
+                <button
+                  class="btn btn-primary btn-sm"
+                  type="button"
+                  onclick="postUpdateUser()"
+                >
                   Save Settings
                 </button>
               </div>
@@ -124,22 +153,12 @@
         </div>
       </div>
     </div>
-    <footer class="footer-basic">
-      <div class="social">
-        <a href="#"><i class="icon ion-social-instagram"></i></a
-        ><a href="#"><i class="icon ion-social-snapchat"></i></a
-        ><a href="#"><i class="icon ion-social-twitter"></i></a
-        ><a href="#"><i class="icon ion-social-facebook"></i></a>
+    <footer id="footer" class="footer-basic mt-auto"></footer>
+    <div id="spinner" class="d-flex justify-content-center">
+      <div class="spinner-border" role="status">
+        <span class="visually-hidden">Loading...</span>
       </div>
-      <ul class="list-inline">
-        <li class="list-inline-item"><a href="#">Home</a></li>
-        <li class="list-inline-item"><a href="#">Services</a></li>
-        <li class="list-inline-item"><a href="#">About</a></li>
-        <li class="list-inline-item"><a href="#">Terms</a></li>
-        <li class="list-inline-item"><a href="#">Privacy Policy</a></li>
-      </ul>
-      <p class="copyright">Company Name © 2022</p>
-    </footer>
+    </div>
     <script src="assets/bootstrap/js/bootstrap.min.js"></script>
     <script src="assets/js/Dark-Mode-Switch.js"></script>
   </body>
