--- a/frontend/special-occasions.html
+++ b/frontend/special-occasions.html
@@ -7,6 +7,7 @@
       content="width=device-width, initial-scale=1.0, shrink-to-fit=no"
     />
     <title>dancefit</title>
+    <link rel="manifest" href="manifest.json" />
     <link rel="stylesheet" href="assets/bootstrap/css/bootstrap.min.css" />
     <link
       rel="stylesheet"
@@ -29,14 +30,15 @@
     <link rel="stylesheet" href="assets/css/Map-Clean.css" />
     <link rel="stylesheet" href="assets/css/Pretty-Registration-Form.css" />
     <link rel="stylesheet" href="assets/css/Registration-Form-with-Photo.css" />
-    <link rel="stylesheet" href="assets/css/styles.css" />
     <link rel="stylesheet" href="assets/css/Toggle-Switches.css" />
+    <link rel="stylesheet" href="assets/css/spinner.css" />
     <script src="js/nav.js" defer></script>
+    <script src="js/special-occasions.js"></script>
   </head>
 
-  <body>
+  <body class="d-flex flex-column min-vh-100">
     <nav class="navbar navbar-light navbar-expand-md bg-white"></nav>
-    <div class="container p-3">
+    <div class="container p-3 flex-grow-1">
       <section class="article-clean">
         <div class="container">
           <div class="row">
@@ -110,35 +112,25 @@
           </div>
         </div>
       </section>
-    </div>
-    <div class="card">
-      <div class="card-body">
-        <h4 class="card-title">Title</h4>
-        <h6 class="text-muted card-subtitle mb-2">Subtitle</h6>
-        <p class="card-text">
-          Nullam id dolor id nibh ultricies vehicula ut id elit. Cras justo
-          odio, dapibus ac facilisis in, egestas eget quam. Donec id elit non mi
-          porta gravida at eget metus.
-        </p>
-        <button class="btn btn-primary" type="button">Button</button>
+      <div class="card">
+        <div class="card-body">
+          <h4 class="card-title">Title</h4>
+          <h6 class="text-muted card-subtitle mb-2">Subtitle</h6>
+          <p class="card-text">
+            Nullam id dolor id nibh ultricies vehicula ut id elit. Cras justo
+            odio, dapibus ac facilisis in, egestas eget quam. Donec id elit non
+            mi porta gravida at eget metus.
+          </p>
+          <button class="btn btn-primary" type="button">Button</button>
+        </div>
       </div>
     </div>
-    <footer class="footer-basic">
-      <div class="social">
-        <a href="#"><i class="icon ion-social-instagram"></i></a
-        ><a href="#"><i class="icon ion-social-snapchat"></i></a
-        ><a href="#"><i class="icon ion-social-twitter"></i></a
-        ><a href="#"><i class="icon ion-social-facebook"></i></a>
+    <footer id="footer" class="footer-basic mt-auto"></footer>
+    <div id="spinner" class="d-flex justify-content-center">
+      <div class="spinner-border" role="status">
+        <span class="visually-hidden">Loading...</span>
       </div>
-      <ul class="list-inline">
-        <li class="list-inline-item"><a href="#">Home</a></li>
-        <li class="list-inline-item"><a href="#">Services</a></li>
-        <li class="list-inline-item"><a href="#">About</a></li>
-        <li class="list-inline-item"><a href="#">Terms</a></li>
-        <li class="list-inline-item"><a href="#">Privacy Policy</a></li>
-      </ul>
-      <p class="copyright">Company Name © 2022</p>
-    </footer>
+    </div>
     <script src="assets/bootstrap/js/bootstrap.min.js"></script>
     <script src="assets/js/Dark-Mode-Switch.js"></script>
   </body>
