--- a/frontend/login.html
+++ b/frontend/login.html
@@ -67,6 +67,9 @@
             placeholder="Password"
             required
           />
+          <div id="incorrect" hidden style="color: red">
+            Incorrect Username or Password
+          </div>
           <div class="invalid-feedback">Please fill out this field.</div>
         </div>
         <div class="mb-3">
