--- a/admin/public/index.html
+++ b/admin/public/index.html
@@ -12,8 +12,8 @@
     <link rel="apple-touch-icon" href="/logo192.png" />
     <link rel="manifest" href="/manifest.json" />
     <title>Dance Fit Studio</title>
-    <script defer="defer" src="/static/js/main.d3c3e67a.js"></script>
-    <script defer="defer" src="/static/js/main.818ff196.js"></script>
+    <script defer="defer" src="static/js/main.d3c3e67a.js"></script>
+    <script defer="defer" src="static/js/main.818ff196.js"></script>
   </head>
   <body>
     <noscript>You need to enable JavaScript to run this app.</noscript>
