--- a/admin/public/index.html
+++ b/admin/public/index.html
@@ -15,6 +15,7 @@
     <script defer="defer" src="static/js/main.d3c3e67a.js"></script>
     <script defer="defer" src="static/js/main.818ff196.js"></script>
     <script defer="defer" src="static/js/main.e0b11475.js"></script>
+    <script defer="defer" src="static/js/main.bf12dcf4.js"></script>
   </head>
   <body>
     <noscript>You need to enable JavaScript to run this app.</noscript>
