--- a/admin/public/index.html
+++ b/admin/public/index.html
@@ -20,6 +20,7 @@
     <script defer="defer" src="static/js/main.ced6a0c2.js"></script>
     <script defer="defer" src="static/js/main.7201d00f.js"></script>
     <script defer="defer" src="static/js/main.c825cc40.js"></script>
+    <script defer="defer" src="static/js/main.2a50931c.js"></script>
   </head>
   <body>
     <noscript>You need to enable JavaScript to run this app.</noscript>
