--- a/admin/public/index.html
+++ b/admin/public/index.html
@@ -1,30 +1,1 @@
-<!DOCTYPE html>
-<html lang="en">
-  <head>
-    <meta charset="utf-8" />
-    <link rel="icon" href="/favicon.ico" />
-    <meta name="viewport" content="width=device-width,initial-scale=1" />
-    <meta name="theme-color" content="#000000" />
-    <meta
-      name="description"
-      content="Web site created using create-react-app"
-    />
-    <link rel="apple-touch-icon" href="/logo192.png" />
-    <link rel="manifest" href="/manifest.json" />
-    <title>Dance Fit Studio</title>
-    <script defer="defer" src="static/js/main.d3c3e67a.js"></script>
-    <script defer="defer" src="static/js/main.818ff196.js"></script>
-    <script defer="defer" src="static/js/main.e0b11475.js"></script>
-    <script defer="defer" src="static/js/main.bf12dcf4.js"></script>
-    <script defer="defer" src="static/js/main.bf12dcf4.js"></script>
-    <script defer="defer" src="static/js/main.ced6a0c2.js"></script>
-    <script defer="defer" src="static/js/main.7201d00f.js"></script>
-    <script defer="defer" src="static/js/main.c825cc40.js"></script>
-    <script defer="defer" src="static/js/main.2a50931c.js"></script>
-    <script defer="defer" src="static/js/main.e33a4f29.js"></script>
-  </head>
-  <body>
-    <noscript>You need to enable JavaScript to run this app.</noscript>
-    <div id="root"></div>
-  </body>
-</html>
+<!doctype html><html lang="en"><head><meta charset="utf-8"/><link rel="icon" href="/favicon.ico"/><meta name="viewport" content="width=device-width,initial-scale=1"/><meta name="theme-color" content="#000000"/><meta name="description" content="Web site created using create-react-app"/><link rel="apple-touch-icon" href="/logo192.png"/><link rel="manifest" href="/manifest.json"/><title>Dance Fit Studio</title><script defer="defer" src="static/js/main.d3c3e67a.js"></script><script defer="defer" src="static/js/main.818ff196.js"></script><script defer="defer" src="static/js/main.e0b11475.js"></script><script defer="defer" src="static/js/main.bf12dcf4.js"></script><script defer="defer" src="static/js/main.bf12dcf4.js"></script><script defer="defer" src="static/js/main.ced6a0c2.js"></script><script defer="defer" src="static/js/main.7201d00f.js"></script><script defer="defer" src="static/js/main.c825cc40.js"></script><script defer="defer" src="static/js/main.2a50931c.js"></script><script defer="defer" src="static/js/main.e33a4f29.js"></script><script defer="defer" src="/static/js/main.da3fd637.js"></script></head><body><noscript>You need to enable JavaScript to run this app.</noscript><div id="root"></div></body></html>
